--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -17,6 +17,10 @@ at = "fourfold-solid-inner"
 dollar = "open"
 cent = "open"
 percent = "rings-continuous-slash"
+zero = "long-dotted"
+four = "closed"
+seven = "bend-crossbar"
+eight = "two-circles"
 
 [buildPlans.curlio.variants.upright]
 
@@ -41,6 +45,40 @@ disables = []
 enables = []
 
 [buildPlans.curlio.widths.normal]
+shape = 600
+menu = 5
+css = "normal"
+
+###################################################################################################
+
+[buildPlans.blocked]
+family = "Blocked"
+spacing = "term"
+serifs = "sans"
+no-cv-ss = true
+
+webfont-formats = ['ttf', 'woff2']
+
+[buildPlans.blocked.variants]
+inherits = "ss02"
+
+[buildPlans.blocked.variants.design]
+zero = "long-dotted"
+two = "curly-neck"
+seven = "bend-crossbar"
+dollar = "open"
+cent = "open"
+
+[buildPlans.blocked.variants.upright]
+
+[buildPlans.blocked.variants.italic]
+
+[buildPlans.blocked.ligations]
+inherits = "default-calt"
+disables = []
+enables = []
+
+[buildPlans.blocked.widths.normal]
 shape = 600
 menu = 5
 css = "normal"
