fix seven glyph

--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -19,7 +19,7 @@ cent = "open"
 percent = "rings-continuous-slash"
 zero = "long-dotted"
 four = "closed"
-seven = "bend-crossbar"
+seven = "bend-serifless"
 eight = "two-circles"
 
 [buildPlans.curlio.variants.upright]
