--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -4,7 +4,7 @@ spacing = "term"
 serifs = "sans"
 no-cv-ss = true
 
-webfont-formats = ['ttf']
+webfont-formats = ['ttf', 'woff2']
 
 [buildPlans.curlio.variants]
 inherits = "ss20"
@@ -21,8 +21,6 @@ zero = "long-dotted"
 four = "closed"
 seven = "bend-serifless"
 eight = "two-circles"
-
-[buildPlans.curlio.variants.upright]
 
 [buildPlans.curlio.variants.italic]
 a = "double-storey-serifless"
