--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -28,10 +28,10 @@ d = "toothed-serifless"
 e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
-i = "serifed-flat-tailed"
+i = "serifed"
 j = "flat-hook-serifless"
 k = "curly-serifless"
-l = "serifed-flat-tailed"
+l = "serifed"
 t = "flat-hook"
 u = "toothed-serifless"
 y = "curly-serifless"
