--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -22,14 +22,13 @@ inherits = "ss20"
 
 [buildPlans.curlio.variants.design]
 capital-g = "toothless-rounded-serifless-hooked"
-capital-j = "flat-hook-serifed"
 a = "double-storey-serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
 i = "serifed"
-j = "flat-hook-serifless"
+j = "flat-hook-serifed"
 k = "curly-serifless"
 l = "serifed"
 t = "flat-hook"
